--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,11 @@ dependencies:
   intl: ^0.19.0
   easy_localization: ^3.0.7
   # For Splash Screen
-  flutter_native_splash: ^2.4.0
+  # flutter_native_splash: ^2.4.0
+  # An SVG rendering and widget library for Flutter, which allows painting and displaying Scalable Vector Graphics 1.1 files.
+  flutter_svg: ^2.0.10+1
+  # For Adapting screen and font size.Guaranteed to look good on different models
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -37,9 +41,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-# assets:
-#   - images/a_dot_burr.jpeg
-#   - images/a_dot_ham.jpeg
+assets:
+  - assets/images/
+  - assets/svgs/
 # fonts:
 #   - family: Schyler
 #     fonts:
