--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   intl: ^0.19.0
   easy_localization: ^3.0.7
   # For Splash Screen
-  # flutter_native_splash: ^2.4.0
+  flutter_native_splash: ^2.4.0
   # An SVG rendering and widget library for Flutter, which allows painting and displaying Scalable Vector Graphics 1.1 files.
   flutter_svg: ^2.0.10+1
   # For Adapting screen and font size.Guaranteed to look good on different models
